<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTitulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reciclerView"
        android:layout_width="379dp"
        android:layout_height="334dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bAñadir"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bAñadir"
        android:layout_width="112dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="283dp"
        android:text="@string/botonAñadir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIdParaEditar" />

    <EditText
        android:id="@+id/etIdParaEditar"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:hint="id:"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="137dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="45dp"
        android:text="@string/botonEditar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/etIdParaEditar"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>